# Time-Tracking

./: .gitignore  CMakeLists.txt  README.md  README.ru.md
_dev/: debug.md
src/: main.cpp
src/core/: timercontroller.cpp  timercontroller.h
src/data/: database.cpp  database.h  models.h
src/resources/: style.qss
src/translations/: timetracker_ru.ts
src/ui/: mainwindow.cpp  mainwindow.h
src/ui/dialogs/: addprojectdialog.cpp  addprojectdialog.h
src/ui/widgets/: analyticswidget.cpp  analyticswidget.h  projectcardwidget.cpp  projectcardwidget.h  sessionhistorywidget.cpp  sessionhistorywidget.h  timerdisplay.cpp  timerdisplay.h
